--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "${workspaceRoot}/bin/Debug/<insert-target-framework-here>/<insert-project-name-here>.dll",
+            "program": "${workspaceRoot}/bin/Debug/netcoreapp2.0/dragonstartrek.dll",
             "args": [],
             "cwd": "${workspaceRoot}",
             "stopAtEntry": false,
